# rust-project-template

./: .codacy.yml  .ecrc  .editorconfig  .envrc  .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  flake.nix  package.json
.github/workflows/: cd.yml  ci.yml
docs/: README.md  _sidebar.md  _template.md  index.html  project_template_information.md  template.md
docs/.generated/: custom-command-usage.md
src/: budget.rs  main.rs
src/utility/: file.rs
tools/cheats/: sample.cheat
tools/command-helper/: default.nix
tools/commands/: default.nix  project-specific.nix
tools/commands/python/: pythontest.py
tools/pre-commit/: default.nix  project-specific.nix
