[package]
name = "rust-project-template"
version = "0.0.1"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
panic = 'abort'



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.11", features = ["derive"] }
